feat: update favicon to PNG, enhance UI styling and add new blog post

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,6 +1,6 @@
 rajesh:
   name: Rajesh Ramesh
-  title: SW Engineer
+  title: AI Engineer
   url: https://rajeshr-ind.github.io
   image_url: https://avatars.githubusercontent.com/u/34510099?v=4
   # page:
@@ -8,5 +8,5 @@ rajesh:
   #   permalink: '/all-sebastien-lorber-articles'
   socials:
     x: rajesh_ramesh_
-    linkedin: rajesh-ramesh-ind
+    linkedin: rajeshr-ind
     github: rajeshr-ind
